src/index.css
@font-face {
    font-family: AvenirNext;
    src: url("/src/assets/font/AvenirNextLTPro-Regular.otf");
}

@font-face {
    font-family: AvenirNextDemiBold;
    font-weight: 600;
    src: url("/src/assets/font/AvenirNextLTPro-Demi.otf");
}

@font-face {
    font-family: AvenirNextBold;
    font-weight: 700;
    src: url("/src/assets/font/AvenirNextLTPro-Bold.otf");
}

@font-face {
    font-family: AvenirNextUltLit;
    font-weight: 275;
    src: url("/src/assets/font/AvenirNextLTPro-UltLtCn.otf");
}

:root {
    --primary-green: #2e5629;
    --primary-white: #f5f1d7;
    --primary-font: #161715;
    --background-white: #fffdf3;
    --button: #d55d2f;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

[id] {
    scroll-margin-top: 128px;
}

html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
    display: flex;
    flex-direction: column;
    min-width: 320px;
    min-height: 100vh;
    overflow-x: hidden;
}

#root {
    flex: 1;
}

nav {
    position: fixed;
    display: flex;
    justify-content: center;
    top: 0;
    left: 0;
    width: 100%;
    height: 124px;
    background: var(--primary-green);
    box-shadow: 0 4px 4px #00000026;
    z-index: 100;
}

nav p {
    font-family: AvenirNextBold;
    color: var(--primary-white);
    transition: all 0.2s;
    padding: 0;
    margin: 0;
    font-size: 19px;
}

.fuglespor-box {
    position: absolute;
    bottom: -80px;
    left: 464px;
    z-index: 2;
}

.fuglespor {
    width: 915px;
    height: 317px;
}

.fuglespor-placer {
    position: relative;
    margin-bottom: 64px;
}

.fuglesporstottoss {
    background-image: url("/fuglespor_stottoss.svg");
    width: 1000px;
    height: 353px;
    background-repeat: no-repeat;
    position: absolute;
    z-index: 1;
    bottom: -100px;
    left: 230px;
}

.fuglespor-mobil {
    display: none;
    height: 225px;
    width: 151px;
}

.navbar {
    width: 1320px;
    padding: 0 60px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.nav-right,
.nav-phone {
    display: flex;
    align-items: center;
    gap: 24px;
}

.nav-phone-numbers {
    display: flex;
    flex-direction: column;
    gap: 4px;
    margin-left: -10px;
}

.mobile-nav-phone {
    display: none;
}

.nav-phone-desktop {
    display: flex;
}

.nav-phone-numbers a {
    font-family: AvenirNext;
    color: var(--primary-white);
    text-decoration: none;
    cursor: pointer;
}

.nav-phone p {
    font-family: AvenirNext;
}

.nav-link {
    text-decoration: none;
}

.logo {
    display: flex;
    gap: 8px;
}

p {
    font-family: AvenirNext, sans-serif;
    font-size: 24px;
    color: var(--primary-font);
    margin: 0;
    line-height: 130%;
}

.p-demi {
    font-family: AvenirNextDemiBold;
    color: var(--primary-green);
}

h1 {
    font-family: Georgia, "Times New Roman", Times, serif;
    font-weight: bold;
    font-size: 47px;
    color: var(--primary-green);
    margin-top: 0;
}

.hero-banner-main {
    max-width: 1440px;
    margin: 124px auto 0 auto;
    height: 828px;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
}

.hero-img-home {
    background-image: url("/home/herobanner.jpg");
}

.hero-img-fuglinod {
    background-image: url("/fuglinod/herobanner.jpg");
}

.hero-img-fugleforing {
    background-image: url("/fugleforing/herobanner.jpg");
}

.hero-img-omoss {
    background-image: url("/omoss/herobanner.jpg");
}

.hero-img-blifrivillig {
    background-image: url("/blifrivillig/herobanner.jpg");
}

.hero-img-stottoss {
    background-image: url("/stottoss/herobanner.jpg");
}

.hero-circle-wrapper {
    overflow: hidden;
    height: 828px;
}

.hero-circle {
    background-color: transparent;
    border: 18px solid var(--primary-white);
    border-radius: 100%;
    height: 1024px;
    width: 1024px;
    position: relative;
    top: 252px;
    right: 284px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.circle-movement {
    top: 356px;
    right: 336px;
}

.hero-inner-circle {
    background-color: var(--primary-green);
    height: 988px;
    width: 988px;
    border-radius: 100%;
    border: 6px solid var(--primary-white);
}

.hero-text {
    position: absolute;
    right: 148px;
    top: 112px;
}

.alt-movement {
    right: 156px;
    top: 122px;
    width: 482px;
}

.hero-h1 {
    font-family: Georgia, "Times New Roman", Times, serif;
    font-weight: bold;
    font-size: 57px;
    margin-bottom: 12px;
    color: var(--primary-white);
}

.hero-p,
.hero-p a {
    font-size: 24px;
    color: var(--primary-white);
    transition: 0.3s;
    line-height: 130%;
}

.alt-text,
.alt-text a {
    font-size: 30px;
}

a {
    text-decoration: 1px underline;
}

button {
    font-family: AvenirNextBold, sans-serif;
    font-size: 19px;
    color: var(--primary-white);
    background-color: var(--button);
    cursor: pointer;
    transition: all 0.2s;
    padding: 7px 28px;
    border: none;
    border-radius: 0 20px 0 20px;
}

.hero-text button {
    font-size: 24px;
    margin-top: 40px;
    padding: 22px 48px;
    border-radius: 0 48px 0 48px;
}

.centered {
    text-align: center;
    align-self: center;
}

.filler {
    width: 100%;
}

.other-orgs {
    width: 100%;
    padding: 0;
}

.other-orgs h1 span {
    display: none;
}

.white-div {
    background-color: var(--background-white);
    display: flex;
    justify-content: center;
}

.green-div {
    background-color: var(--primary-green);
    max-width: 1440px;
    display: flex;
    justify-content: center;
    margin: 0 auto;
    border-radius: 0 0 20px 20px;
}

.main-div-box {
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 1320px;
    gap: 64px;
    margin: 160px 60px;
}

.main-div-textbox {
    max-width: 54%;
}
/* ... */

